--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
           pytest
           
       - name: Deploy Application
-        run: echo "Deploying application..
+        run: echo "Deploying application..."
       
